--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-# JIRA connection
 jira.url=https://training-feedback.redhat.com
-jira.username=<JiraUsername>
-jira.password=<JiraPassword>
-jira.project=<YourRepo>
+jira.username=<JIRAUSERNAME>
+jira.password=<JIRAPW>
+
 #Github connection
 github.owner=RedHatTraining
-github.oauth=<YourOuathKey>
+github.oauth=<GITHUBAUTH>
